--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,11 +44,18 @@ jobs:
           # Menjalankan file python yang berisi logika cleaning & preprocessing
           python preprocessing/automate_Farrel-Paksi-Aditya.py 
  
-      # Save models to GitHub Repository
-      - name: Save mlruns to repo
+      # Menyimpan perubahan (file hasil) dan push balik ke GitHub
+      - name: Commit and Push changes
         run: |
-          git config --global user.name ${{ secrets.username }}
-          git config --global user.email ${{ secrets.email }}
+          # Konfigurasi identitas bot git
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Menambahkan file output hasil preprocessing ke staging area
           git add preprocessing/titanic_preprocessing.csv
+          
+          # Melakukan commit jika ada perubahan data
           git commit -m "Auto-generated: Update titanic_preprocessing.csv by GitHub Action" || echo "No changes to commit"
+          
+          # Mengirim (push) perubahan kembali ke branch main
           git push
